# railway

./: .gitignore  Cargo.toml  README.md
crates/alerting/: Cargo.toml
crates/alerting/src/: engine.rs  evaluator.rs  lib.rs  rules.rs  window.rs
crates/api/: Cargo.toml
crates/api/src/: alerts.rs  app.rs  correlate.rs  error.rs  lib.rs  models.rs  services.rs  traces.rs
crates/collector/: Cargo.toml
crates/collector/src/: main.rs  synthetic.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  service.rs  span.rs  trace.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: docker.rs  lib.rs  mapping.rs  netns.rs
crates/http-parser/: Cargo.toml
crates/http-parser/src/: headers.rs  lib.rs  request.rs  response.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: lib.rs  pipeline.rs  route.rs  writer.rs
crates/span-assembler/: Cargo.toml
crates/span-assembler/src/: assembler.rs  connection.rs  event.rs  lib.rs
crates/span-assembler/tests/: integration.rs
demo/: docker-compose.yml  generate-traffic.sh
demo/api-gateway/: Dockerfile  app.py
demo/db-service/: Dockerfile  app.py
demo/payment-service/: Dockerfile  app.py
demo/user-service/: Dockerfile  app.js  package.json
ebpf/: Cargo.toml
ebpf/rail-obs-ebpf-common/: Cargo.toml
ebpf/rail-obs-ebpf-common/src/: lib.rs
ebpf/rail-obs-ebpf-probes/: Cargo.toml
ebpf/rail-obs-ebpf-probes/src/: main.rs
ebpf/rail-obs-userspace/: Cargo.toml
ebpf/rail-obs-userspace/src/: main.rs
sql/clickhouse/: 001_create_tables.sql  002_example_queries.sql
sql/postgres/: 001_create_tables.sql
