[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/http-parser",
    "crates/span-assembler",
    "crates/ingestion",
    "crates/alerting",
    "crates/api",
    "crates/collector",
    "crates/discovery",
]
exclude = ["ebpf"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/placeholder/rail-obs"

[workspace.dependencies]
# Shared across crates
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# HTTP / API
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }

# Database
clickhouse = { version = "0.13", features = ["time"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Internal crates
rail-obs-common = { path = "crates/common" }
rail-obs-http-parser = { path = "crates/http-parser" }
rail-obs-span-assembler = { path = "crates/span-assembler" }
rail-obs-ingestion = { path = "crates/ingestion" }
rail-obs-alerting = { path = "crates/alerting" }
rail-obs-api = { path = "crates/api" }
rail-obs-discovery = { path = "crates/discovery" }
rail-obs-collector = { path = "crates/collector" }
