[package]
name = "rail-obs-ingestion"
version.workspace = true
edition.workspace = true

[dependencies]
rail-obs-common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
clickhouse = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
