[package]
name = "rail-obs-userspace"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = "0.13"
aya-log = "0.2"
rail-obs-ebpf-common = { path = "../rail-obs-ebpf-common" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
bytes = "1"
